WebRoot/js/zimbraMail/config/style/zm.css
/* ... */
.MainShell {}





/* Dwt-created elements that have their ID set so we can tweak them specifically here */

/* MOVE TO SKIN ??? */
#ZmTagColorMenu {
	width: 100px;	/* ??? SIZE */
	height: 22px;
}



/*
 * Banner - shows username, quota bar
 *			(enlarges, turns green when angry)
 */


/* Outside container for the banner */
.BannerBar {}

.BannerBar .quotabar {
	@ProgressBarContainer@
	width: 100px;
	height: 6px;
}

.BannerBar .quotaUsed {
	@ProgressBarBg-info@
	height: 6px;
}

/* 65% - 85% of quota used */
.BannerBar .quotaWarning {
	@ProgressBarBg-warning@
	height: 6px;
}

/* 85%+ of quota used */
.BannerBar .quotaCritical {
	@ProgressBarBg-critical@
	height: 6px;
}


/* percent used label */
.BannerBar .percent {
	@FontSize-smaller@
	@ChromeText@
	@NoWrap@
/*	@FixIESizeQuirk@	/* WEIRD IE QUIRK */
	
}

.BannerBar td {
	padding-right: @BoxPaddingSize@;
}

/* ??? USED? */
.BannerBar img {
	border: none;
	margin-right: 2px;
}

/* Quota label */
.BannerBar .BannerText {
	@ChromeText@
	@NoWrap@
	text-align: center;
}

/* User label */
.BannerBar .BannerTextUser {
	@ChromeText@
	@NoWrap@
	text-align: center;
	font-weight: bold;

}





/* Status bar stuff */

.ZmStatusMainText {	
	@ToastText@
}

.ZmStatusToastText { 
	@ToastText@
}

.ZmStatusInfoToast {
	@ToastContainer@
	@ToastBg-info@
}
.ZmStatusWarningToast {	
	@ToastContainer@
	@ToastBg-warning@
}
.ZmStatusCriticalToast {	
	@ToastContainer@
	@ToastBg-critical@
}

.ZmStatusHistory { 
	width: 400px; 				/* ??? SIZE */
	height: 285px; 
	@BoxMargin@
	margin-bottom: 0px;
	overflow: auto;
}



/*
 *  Dwt Overrides
 */



/*
 *	Overview tree (list of folders)
 */


/* Override so first level of the tree does not indent */
/* ??? DO WE WANT THIS FOR ALL TREES, OR JUST IN THE OVERVIEW TREES */
.DwtTreeItemLevel1ChildDiv {
	padding-left:0px;
	margin-bottom:5px;
}



/*
 * Tool Bars
 */


/* ???? USED? */
.ZmToolBar {
	@FullWidth@
}

/* Search toolbar */
.ZmSearchToolbar {
	@FullSize@
}

/* Search builder toolbar (buttons only) */
.ZmBrowseToolBar {
	margin-top:-3px;
	@FullSize@
}

/* Main (horizontal) application toolbar */
.ZmAppToolBar {
	@FullSize@
}


/* Navigation portion of the main app toolbar -- arrows and count label */
.ZmNavToolBar {
	/*background-color: transparent;*/
}

/* toolbar in child window */
.ZmAppToolBar_cw {
	@ToolbarContainer@
	@FullWidth@
}

/* toolbar in child window for message view */
.ZmMsgViewToolBar_cw {
	@ToolbarContainer@
	@FullWidth@
}

/* toolbars in read message view that let you accept an appointment, share, etc (with no border) */
.ZmInviteToolBar, .ZmShareToolBar {
	@InlineToolbarContainer@
	padding-left:@BoxPaddingSize@
}


.ZmNavToolBar .DwtText {white-space: nowrap;}


/* ??? USE ? */
td.DDSepVisible div {
	background-color:black; 
	width:1px;
	overflow:hidden;
}
td.DDSepInvisible div {
	background-color:transparent;
	width:1px;
	overflow:hidden;
}



/* 
 * Search bar
 */

/* Search bar outer container */
.SearchPanel {	}


/* Search input field */
.search_input {
	width:100%;
}



/* 
 * Search builder
 */

/* Search builder outer container */
.ZmBrowseView {
	height: 225px;		/* ??? SIZE */
	width: 100%;
	overflow: hidden;
}


/* 
 * Search builder "pickers" or panes 
 */

/* outer container for an individual picker */
.ZmPicker {
	@PickerContainer@
}

/* Header for each picker */
.ZmPicker .DwtToolBar {
	@WidgetHeaderContainer@
	@WidgetHeaderSize-medium@
}

/* Name of the picker in the header */
.ZmPickerLabel .Text {
	@FontSize-big@
	font-weight:bold;
}

/* Container for the body of each picker */
.ZmPickerOverview {
	overflow: hidden;
}

/* ??? SHOTGUN */
.ZmPickerOverview td {
	 @Label@ 
}




/*
 * Conversation view stuff
 */

/* message fragment text */
.ZmConvListFragment,
.Row-Selected .ZmConvListFragment { 
	@Text-disabled@
	font-weight: normal; 
}

/* Conversation view outer container (header, list and reading pane) */
.ZmConvView {}

/* Remove the border around the email conversation/message panes */
#ZmConvListView,
.ZmConvView .DwtListView,
.ZmTradView .DwtListView {
	border:0px;
}

 

/* ??? SHOTGUN */
.ZmConvView td { 
	@NoWrap@
}

/* Container for the header of this particular conversation */
.ZmConvView .SubjectBar {
	@PageHeaderBg@
	@BottomSeparator@
}

/* Label for the header of this conversation */
.ZmConvView .Subject {
	@Text@
	@FontSize-bigger@
	@BoxPadding@
	@NoWrap@
	@OverflowEllipsis@
}

.ZmConvView .Tags {
	vertical-align:bottom;
}

/* put space between display of tag icons and their names */
.Tags a { 
	@NoWrap@
	padding-right: @BoxPaddingSize@; 	/* ??? SIZE */
}



/* Container for the view of one particular message 
	-- there can be two instances, one for "conversation" view and one for "messages" view */
.ZmMailMsgView {
	@FullWidth@
	@AppBg@
	@Text@
}

/* Container for the body of the message */
.MsgBody {
	@AppBg@
	@Text@
}

/* ??? USE? */
.ZmMailMsgView .ZmToolBar {
	@InlineToolbarContainer@
	margin-left: 12px;
	height: auto;
	width: auto;
}

/* Container for the header of the message */
.ZmMailMsgView .MsgHeaderTable {
	padding-top:5px;
	@WidgetHeaderContainer@
}

.ZmMailMsgView .SubjectCol { 
	@FontSize-bigger@
	@Text@
}

.ZmMailMsgView .LabelColName {
	@NoWrap@
	@Label@		/* ??? bold?*/
	vertical-align: top;
	text-align: right;
	padding: 3 0 3 0;
}

.ZmMailMsgView .LabelColValue {
	@Text@
	white-space: normal;
	vertical-align: top;
	padding: 3px;
}

/* ??? USE? */
.ZmMailMsgView .AttName, 
.ZmMailMsgView .AttName-matched {
	padding-right: 8px;
}

/* ??? USE? */
.ZmMailMsgView .AttName-matched { 
	@Anchor-matched@
	white-space: nowrap; 
}

/* ??? MOVE ME */
/* "Display Images" button in mail message view to show hidden images */
/* ??? "Displayimages" CLASS REALLY SHOULD BE SHARED WITH "SpellCheckModeDiv"  */
/* CLASS DEFINED IN spellcheck.css SINCE THEY SHOULD HAVE THE SAME VISUAL LOOK */
.Displayimages {
	cursor: pointer;
	background-color: #FFFFCC;
	padding: 7px;
	font-size: 10pt;
	border-bottom: 1px solid #777777;
}
/* ... */

