http://bugzilla.zimbra.com/show_bug.cgi?id=8390 bug: 8390 Fixed alignment of search builder toolbar
Copied from Perforce
 Change: 28292

--- a/WebRoot/js/zimbraMail/config/style/zm.css
+++ b/WebRoot/js/zimbraMail/config/style/zm.css
@@ -224,7 +224,7 @@
 
 /* Search builder toolbar (buttons only) */
 .ZmBrowseToolBar {
-	margin-top:-3px;
+	margin-top:3px;
 	@FullSize@
 }
 
